(SIMP-100) Ensures pupmod-simp-oddjob passes Travis tests
SIMP-100 #close as the tests pass

--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,5 +1,6 @@
 ---
 fixtures:
+  repositories:
+    common: 'git://github.com/simp/pupmod-simp-common'
   symlinks:
     oddjob: "#{source_dir}"
-    common: "#{source_dir}/../common"
