--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,10 @@
+---
 language: ruby
+bundler_args: --without debug
+rvm:
+    - 1.9.3
+    - 2.0.0
+    - 2.2.0
+gemfile: Gemfile
+notifications:
+    email: false
