--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,17 @@
 ---
 language: ruby
 rvm:
+    - 1.8.7
     - 1.9.3
     - 2.0.0
-gemfile: Gemfile
+    - 2.2.1
 script:
+    - 'bundle install'
+    - 'bundle exec rake lint'
+    - 'bundle exec rake validate'
     - 'bundle exec rake spec'
-notifications:
-    email: false
+    - 'bundle exec rake build'
+matrix:
+    allow_failures:
+        - rvm: 1.8.7
+        - rvm: 2.2.1
